--- a/extensions/generate_encoder_vs_decoder_correlations.ipynb
+++ b/extensions/generate_encoder_vs_decoder_correlations.ipynb
@@ -236,7 +236,8 @@
     "\n",
     "# Note there are a few ways we could possibly do this, e.g. taking the mean of the feature values first\n",
     "# However, I think that unnecessarily discards structure that we might otherwise want to keep.\n",
-    "pearsons_rho = np.corrcoef(encoder_attributions.flatten(), pipeline_attributions.flatten())\n",
+    "pearsons_rho = np.corrcoef(encoder_attributions.flatten(),\n",
+    "                           pipeline_attributions.flatten())\n",
     "pearsons_rho"
    ],
    "metadata": {
@@ -552,6 +553,26 @@
     "    rhos.append(rho)\n",
     "\n",
     "rhos = np.array(rhos)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.1046247112477226"
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(rhos).mean()**2"
    ],
    "metadata": {
     "collapsed": false
