refactor to include all runs

--- a/extensions/exploratory_encoder_vs_decoder_correlations.ipynb
+++ b/extensions/exploratory_encoder_vs_decoder_correlations.ipynb
@@ -1209,6 +1209,35 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "outputs": [],
+   "source": [
+    "class A:\n",
+    "\n",
+    "    def __init__(self, a):\n",
+    "        self.a = a\n",
+    "\n",
+    "class B:\n",
+    "    def __init__(self, factory):\n",
+    "        self.A = factory(5)\n",
+    "\n",
+    "b = B(A)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
