--- a/extensions/first_class_encoder_vs_decoder_correlations.ipynb
+++ b/extensions/first_class_encoder_vs_decoder_correlations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -10,7 +10,7 @@
    "source": [
     "from encoder_decoder_correlations import EncoderDecoderComparison\n",
     "import torch\n",
-    "from lfxai.models.images import ClassifierMnist, EncoderMnist\n",
+    "\n",
     "import os\n",
     "import copy\n",
     "\n",
@@ -24,39 +24,6 @@
    "source": [
     "# Define globals\n",
     "DEVICE = 'gpu' if torch.cuda.is_available() else 'cpu'"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Classifier Loaded\n"
-     ]
-    }
-   ],
-   "source": [
-    "#### Model loading ######\n",
-    "# Specification\n",
-    "dim_latent = 4\n",
-    "name = \"TestClassifier\"\n",
-    "classifier_state_dict_path = os.path.join('..', 'TrainedModels', 'MNIST', 'Classifier_run0.pt') # TODO Need to loop over runs\n",
-    "\n",
-    "# Load\n",
-    "encoder = EncoderMnist(dim_latent)\n",
-    "\n",
-    "classifier = ClassifierMnist(encoder, dim_latent, name)\n",
-    "classifier.load_state_dict(torch.load(classifier_state_dict_path), strict=True)\n",
-    "\n",
-    "encoder = copy.deepcopy(classifier.encoder) # Copies the params to the encoder variable\n",
-    "\n",
-    "print(\"Classifier Loaded\")"
    ],
    "metadata": {
     "collapsed": false
@@ -79,21 +46,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating Attributions\n",
-      "attributions calculated\n"
+      "Loading data...\n",
+      "Loading Models and Calculating Attributions...\n",
+      "Loading model in ../TrainedModels\\MNIST\\Classifier_run0.pt\n",
+      "Loading model in ../TrainedModels\\MNIST\\Classifier_run1.pt\n",
+      "Loading model in ../TrainedModels\\MNIST\\Classifier_run2.pt\n",
+      "Loading model in ../TrainedModels\\MNIST\\Classifier_run3.pt\n",
+      "Loading model in ../TrainedModels\\MNIST\\Classifier_run4.pt\n",
+      "Complete\n"
      ]
     }
    ],
    "source": [
-    "gradshap_full_model = GradientShap(classifier)\n",
-    "gradshap_encoder = GradientShap(encoder)\n",
-    "\n",
     "gradient_shap_experiment = EncoderDecoderComparison(\n",
     "    model_name=\"\",\n",
-    "    full_model=classifier,\n",
-    "    encoder = encoder,\n",
-    "    full_model_attributer=gradshap_full_model,\n",
-    "    encoder_attributer=gradshap_encoder,\n",
+    "    attributer_factory=GradientShap,\n",
     "    dataset='MNIST',\n",
     "    device = DEVICE,\n",
     ")"
@@ -107,8 +74,26 @@
    "execution_count": 5,
    "outputs": [],
    "source": [
-    "gradient_shap_image_pearsons = gradient_shap_experiment.get_all_image_pearsons()\n",
-    "gradient_shap_image_pearsons.mean() # Delete - just checking that this looks approximately correct"
+    "res = gradient_shap_experiment.get_all_model_pearsons(True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.32325832 0.34562456 0.32936871 0.36408132 0.3244261 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(res.mean(axis=1))"
    ],
    "metadata": {
     "collapsed": false
@@ -125,54 +110,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating Attributions\n",
-      "attributions calculated\n"
+      "Loading data...\n",
+      "Loading Models and Calculating Attributions...\n",
+      "Loading model in ../TrainedModels\\MNIST\\Classifier_run0.pt\n"
      ]
     }
    ],
    "source": [
-    "ig_full_model = IntegratedGradients(classifier)\n",
-    "ig_encoder = IntegratedGradients(encoder)\n",
-    "\n",
     "ig_experiment = EncoderDecoderComparison(\n",
     "    model_name=\"\",\n",
-    "    full_model=classifier,\n",
-    "    encoder = encoder,\n",
-    "    full_model_attributer=ig_full_model,\n",
-    "    encoder_attributer=ig_encoder,\n",
+    "    attributer_factory=IntegratedGradients,\n",
     "    dataset='MNIST',\n",
     "    device = DEVICE,\n",
     ")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0.2243376760550648"
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "ig_pearsons = ig_experiment.get_all_image_pearsons()\n",
-    "ig_pearsons.mean()**2 # Delete - just checking that this looks approximately correct"
+    "ig_pearsons = ig_experiment.get_all_model_pearsons(True)\n",
+    "ig_pearsons.mean(axis=1)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
@@ -186,66 +163,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating Attributions\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\niksm\\Documents\\CodeForUni\\FACT\\venv\\lib\\site-packages\\captum\\_utils\\gradient.py:57: UserWarning: Input Tensor 0 did not already require gradients, required_grads has been set automatically.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "attributions calculated\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "sal_full_model = Saliency(classifier)\n",
-    "sal_encoder = Saliency(encoder)\n",
-    "\n",
     "sal_experiment = EncoderDecoderComparison(\n",
     "    model_name=\"\",\n",
-    "    full_model=classifier,\n",
-    "    encoder = encoder,\n",
-    "    full_model_attributer=sal_full_model,\n",
-    "    encoder_attributer=sal_encoder,\n",
+    "    attributer_factory=Saliency,\n",
     "    dataset='MNIST',\n",
     "    device = DEVICE,\n",
     ")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0.13540589165468833"
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "sal_pearsons = sal_experiment.get_all_image_pearsons()\n",
-    "sal_pearsons.mean()"
+    "sal_pearsons = sal_experiment.get_all_model_pearsons(True)\n",
+    "sal_pearsons.mean(axis=1)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
