--- a/extensions/first_class_encoder_vs_decoder_correlations.ipynb
+++ b/extensions/first_class_encoder_vs_decoder_correlations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -11,15 +11,12 @@
     "from encoder_decoder_correlations import EncoderDecoderComparison\n",
     "import torch\n",
     "\n",
-    "import os\n",
-    "import copy\n",
-    "\n",
     "from captum.attr import GradientShap, IntegratedGradients, Saliency"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Define globals\n",
@@ -40,23 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data...\n",
-      "Loading Models and Calculating Attributions...\n",
-      "Loading model in ../TrainedModels\\MNIST\\Classifier_run0.pt\n",
-      "Loading model in ../TrainedModels\\MNIST\\Classifier_run1.pt\n",
-      "Loading model in ../TrainedModels\\MNIST\\Classifier_run2.pt\n",
-      "Loading model in ../TrainedModels\\MNIST\\Classifier_run3.pt\n",
-      "Loading model in ../TrainedModels\\MNIST\\Classifier_run4.pt\n",
-      "Complete\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "gradient_shap_experiment = EncoderDecoderComparison(\n",
     "    model_name=\"\",\n",
@@ -71,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "res = gradient_shap_experiment.get_all_model_pearsons(True)"
@@ -82,16 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.32325832 0.34562456 0.32936871 0.36408132 0.3244261 ]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "print(res.mean(axis=1))"
    ],
@@ -111,17 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data...\n",
-      "Loading Models and Calculating Attributions...\n",
-      "Loading model in ../TrainedModels\\MNIST\\Classifier_run0.pt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ig_experiment = EncoderDecoderComparison(\n",
     "    model_name=\"\",\n",
@@ -131,10 +95,7 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
@@ -146,10 +107,7 @@
     "ig_pearsons.mean(axis=1)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
@@ -174,10 +132,7 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
@@ -189,10 +144,7 @@
     "sal_pearsons.mean(axis=1)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
