nisk code added

--- a/extensions/first_class_encoder_vs_decoder_correlations.ipynb
+++ b/extensions/first_class_encoder_vs_decoder_correlations.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd ../"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -15,7 +24,7 @@
     }
    ],
    "source": [
-    "from encoder_decoder_correlations import EncoderDecoderComparison\n",
+    "from extensions.encoder_decoder_correlations import EncoderDecoderComparison\n",
     "import torch\n",
     "\n",
     "from captum.attr import GradientShap, IntegratedGradients, Saliency"
